# group-nextcloud-sync

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/ldap2nextcloud/: cli.py  config.py  models.py  sync.py
src/ldap2nextcloud/adapters/: base.py  json_file.py  ldap.py  xinrenxinshi.py
